<resources>
    <string name="app_name">testKotlin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="grades">Oceny</string>
    <string name="previous">Previous</string>
    <string name="imie">Imie:</string>
    <string name="imieHint">Wpisz imię</string>
    <string name="nazwisko">Nazwisko:</string>
    <string name="nazwiskoHint">Wpisz nazwisko</string>
    <string name="lOcen">Liczba ocen:</string>
    <string name="lOcenHint">Wpisz liczbę ocen(5–15)</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="errorMissingText">Nie może być puste</string>
    <string name="errorGradeNotInAScope">Niepoprawna liczba ocen</string>
    <string name="FillerLabel">Filler</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="next">Next</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="srednia">Oblicz średnią</string>
    <string name="placeholder">Placeholder</string>
    <string name="your_srednia_label">Twoja średnia to: </string>
    <string name="congratulations">Brawo zdałeś użytkowniku!</string>
    <string name="unfortunate">Nie zdałeś kolego</string>
    <string-array name="classes">
        <item>Angielski</item>
        <item>Polski</item>
        <item>Matematyka</item>
        <item>Geografia</item>
        <item>Fizyka</item>
        <item>WF</item>
        <item>PP</item>
        <item>Biologia</item>
        <item>Chemia</item>
        <item>Historia</item>
        <item>Elektrotechnika</item>
        <item>Informatyka</item>
        <item>WOS</item>
        <item>Programowanie</item>
        <item>Kabelki</item>
    </string-array>
</resources>