<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/imie_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/imie"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/imie_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="name"
            android:hint="@string/imieHint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nazwisko_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/nazwisko"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nazwisko_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="name"
            android:hint="@string/nazwiskoHint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locen_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/lOcen"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/locen_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints=""
            android:hint="@string/lOcenHint"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"/>

</LinearLayout>